Prevent Y overflow in wrapper, which sometimes causes second scrollbar

--- a/css/main.scss
+++ b/css/main.scss
@@ -21,5 +21,5 @@ body, html {
 }
 
 body > .wrapper {
-    overflow-x: hidden;
+    overflow: hidden;
 }
